--- a/common/package.json
+++ b/common/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@bhavya/brew-common",
+  "name": "@bhavya_anupoju/brew-common",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
