--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@bhavya_anupoju/brew-common": "^1.0.0",
     "axios": "^1.7.2",
     "react": "^18.2.0",
+    "jwt-decode": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
   },
